# compiler-rs

./: .gitignore  Cargo.toml  Makefile  README.md  agent.md
bindings/go/: README.md  build-wasm.sh  compiler_rs.wasm  go.mod
cases/demo/: 01-line.json  02-group.json
cases/regression/: 001-grouped_damped_oscillation.json  002-grouped_divergent_split.json  003-grouped_drop_then_lower_plateau.json  004-grouped_dual_spikes.json  005-grouped_gradual_decline.json  006-grouped_gradual_drift.json  007-grouped_high_imbalance__insert.json  008-grouped_high_imbalance__select.json  009-grouped_high_peer_decay.json  010-grouped_jitter_then_stable.json  011-grouped_late_step_up.json  012-grouped_mid_window_burst_cluster.json  013-grouped_multi_plateau_switch.json  014-grouped_one_peer_double_step.json  015-grouped_peer_crossing.json  016-grouped_periodic_oscillation.json  017-grouped_plateau_high_peer.json  018-grouped_plateau_then_one_rises_again.json  019-grouped_ramp_to_plateau.json  020-grouped_recovery.json  021-grouped_repeated_spikes.json  022-grouped_shape_outlier_same_level.json  023-grouped_shared_drop__insert.json  024-grouped_shared_drop__select.json  025-grouped_shared_drop_then_one_recovers.json  026-grouped_shared_drop_then_recovery.json  027-grouped_shared_ramp_up.json  035-grouped_spike.json  (+24 more)
crates/compiler-core/: Cargo.toml
crates/compiler-core/src/: analyze.rs  features.rs  lib.rs  normalize.rs  payload.rs  segment.rs
docs/: integration.md  regression-viewer.md  rust-semantic-kernel.md  wasm.md
src/: lib.rs  main.rs
tools/: sync_compiler_cases.py
(+12 files in other folders)
